[tool.poetry]
name = "laptopwise"
version = "0.1.0"
description = "A tool to compare laptops and find the best value for money"
authors = ["Daniil Petrov <octrow@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
playwright = "^1.46.0"
polars = "^1.5.0"
scikit-learn = "^1.5.1"
transformers = "^4.44.2"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
hypothesis = "^6.111.2"
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
ruff = "^0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
